# gaiapy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  metadata_workflow.py
gaiapy/core/: linear.py
geoancestry.egg-info/: PKG-INFO
r_comparison/: compare_gaia.py  run_gaia.R
tests/: __init__.py  test_r_comparison.py
